fix overflowing in select field in the creation form

--- a/client/src/styles/base/_global.scss
+++ b/client/src/styles/base/_global.scss
@@ -3,10 +3,7 @@
     margin:0;
     padding: 0;
     height: 100%;
-}
-
-html{
-    
+    object-fit: contain;
 }
 
 body{
