--- a/client/src/styles/components/_Landing.scss
+++ b/client/src/styles/components/_Landing.scss
@@ -10,28 +10,34 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
+    object-fit: contain; 
 }
 
 #Landing_button{
     margin: 0 30vw;
-    height: 10vh;
-    border-radius: 25px;
-    background-color: #04095794;
-    a{
+    height: 10vh; 
+    text-decoration: none;
+    
+    button{
         text-decoration: none;
-        font-size: 2.2em;
+        font-size: 2em;
         font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         font-weight: 700;
         color:#f60e1ac9;
+        border-radius: 25px;
+        background-color: #04095794;
+        padding: 0 1vw;
+        text-align: center;
     }
 
 }
 
 #Landing_button:hover{
     outline: 0;
-    background-color:#f60e1aa4;
-    a{
+    button{
         color:#080bc2c9;
+        background-color:#f60e1aa4;
     }
 }
 
