--- a/client/src/styles/components/_Pokemon.scss
+++ b/client/src/styles/components/_Pokemon.scss
@@ -1,5 +1,4 @@
 .Pokemon_card{
-    border: 1px solid black;
     display: flex;
     flex-direction: column;
     align-items: center;
